--- a/StudentHub/Client/StudentHub.Client.csproj
+++ b/StudentHub/Client/StudentHub.Client.csproj
@@ -12,7 +12,11 @@
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.13"/>
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.13" PrivateAssets="all"/>
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="7.0.13"/>
+        <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.0" />
         <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0"/>
+        <PackageReference Include="Syncfusion.Blazor" Version="23.2.5" />
+        <PackageReference Include="Syncfusion.Blazor.SfPdfViewer" Version="23.2.5" />
+        <PackageReference Include="Syncfusion.EJ2.PdfViewer.AspNet.Core.OSX" Version="23.2.5" />
     </ItemGroup>
 
     <ItemGroup>
